# tpaste

./: .gitignore  Cargo.toml  README.md  docker-compose.yml  init.sql
client/: Cargo.toml
client/src/: main.rs
server/: Cargo.toml
server/src/: db.rs  helpers.rs  main.rs  template.rs
server/templates/: index.html  navbar.html
shared/: Cargo.toml
src/: client.rs  common.rs  helpers.rs  model.rs  server.rs
templates/: login.html  paste.html  profile.html  register.html
