[package]
name = "tpaste"
version = "0.1.0"
edition = "2024"

[[bin]]
name = "server"
path = "src/server.rs"

[[bin]]
name = "client"
path = "src/client.rs"


[dependencies]
jsonwebtoken = { version="10", features = ["rust_crypto"] }
chrono = { version = "0.4", features = ["serde"] }
serde = { version = "1", features = ["derive"] }
tokio = { version = "1.48.0", features = ["full"] }
tracing-subscriber = { version = "0.3", default-features = false, features=["fmt"] }
axum = { version ="0.8.7" }
axum-server = { version = "0.7", features = ["tls-rustls"] }
axum-extra = {version="0.12.5", features=["typed-header"]}
askama = "0.14.0"
sqlx = { version = "0.8", features = ["postgres", "runtime-tokio", "macros", "chrono", "tls-rustls"] }
dotenv = "0.15"
anyhow = "1"
reqwest={version = "0.12", default-features=false, features=["blocking","json","rustls-tls-native-roots"]}
rand = "0.9.2"
rustls = { version = "0.23", features = ["ring"] }
argon2 = "0.5"
