[package]
name = "tpaste-server"
version = "0.2.0"
edition = "2024"

[dependencies]
jsonwebtoken = { version="10", features = ["rust_crypto"] }
chrono = { version = "0.4", features = ["serde"] }
tokio = { version = "1.48.0", features = ["full"] }
tracing-subscriber = { version = "0.3", default-features = false, features=["fmt"] }
axum = { version ="0.8.7" }
axum-server = { version = "0.7", features = ["tls-rustls"] }
axum-extra = {version="0.12.5", features=["typed-header"]}
askama = "0.14.0"
sqlx = { version = "0.8", features = ["postgres", "runtime-tokio", "macros", "chrono", "tls-rustls"] }
rand = "0.9.2"
rustls = { version = "0.23", features = ["ring"] }
argon2 = "0.5"
dotenv = "0.15"
anyhow = "1"
serde = { version = "1", features = ["derive"] }

tpaste-shared={path="../shared"}